--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,16 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] 
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+ReWriteCond %{REQUEST_URI} .git
+RewriteRule ^(.*)$ https://%{HTTP_HOST} [L,R=301]
+
+<Files .htaccess>
+    Order allow,deny
+    Deny from all
+</Files>
+
+<Files ~ "^.*\.(LOG|log|sql)">
+    Order allow,deny
+    Deny from all
+</Files>
