--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+ErrorDocument 404 /404.php
+
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
